# Rajawali

./: .classpath  .gitignore  .gitmodules  .project  .travis.before_script.sh  .travis.compile.sh  .travis.decryption  .travis.publish.sh  .travis.yml  AndroidManifest.xml  CHANGELOG.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE.txt  README.md  build.gradle  deps.gradle  gradle.properties  index.html  jacoco.gradle  javadoc.xml  maven.keystore.gpg  maven_push.gradle  package-list  pom.xml  publish.gradle  rajawali_secret.gpg.enc  rajawali_style.xml  settings.gradle  versions.gradle
assimpintegration/: CMakeLists.txt  build.gradle
assimpintegration/src/androidTest/java/org/rajawali3d/assimpintegration/: ExampleInstrumentedTest.java
assimpintegration/src/main/: AndroidManifest.xml
assimpintegration/src/main/cpp/: native.c
assimpintegration/src/main/java/: Assimp.java
assimpintegration/src/main/res/values/: strings.xml
rajawali/: .gitignore  CMakeLists.txt  build.gradle  gradle.properties  lint.xml  maven_push.gradle
rajawali/src/androidTest/: AndroidManifest.xml
rajawali/src/androidTest/java/c/org/rajawali3d/: GlTestCase.java
rajawali/src/androidTest/java/org/rajawali3d/: ATransformable3DTest.java  Geometry3Dtest.java  WorldParametersTest.java
rajawali/src/debug/: AndroidManifest.xml
rajawali/src/debug/java/org/rajawali3d/: GlTestActivity.java
rajawali/src/debug/res/raw/: rajawali_tex_mip_0.pkm  rajawali_tex_mip_2.pkm
rajawali/src/debug/res/values/: strings.xml
rajawali/src/main/: AndroidManifest.xml
rajawali/src/main/cpp/: extdebugmarker.c  gl_framebuffer.cpp  oestexture3d.c
rajawali/src/main/java/org/rajawali3d/: ATransformable3D.java  BufferInfo.java  Camera.java  Camera2D.java  Capabilities.java  ChaseCamera.java  Frustum.java  GLNative.java  Geometry3D.java  IRajawaliDisplay.java  Object3D.java  OrthographicCamera.java  RajawaliActivity.java  RajawaliDaydream.java  RajawaliFragment.java  RajawaliSupportFragment.java  SerializedObject3D.java  WorldParameters.java
rajawali/src/main/java/rajawali/: ATransformable3D.java  BufferInfo.java  Camera.java  Capabilities.java  ChaseCamera.java  Geometry3D.java  IRajawaliDisplay.java  Object3D.java  OrthographicCamera.java  RajawaliActivity.java  RajawaliDaydream.java  RajawaliFragment.java  RajawaliSupportFragment.java
rajawali/src/main/java/rajawali/animation/: Animation.java  AnimationGroup.java  CoalesceAnimation3D.java  ColorAnimation3D.java  IPlayable.java  Playable.java  RotateAroundAnimation3D.java  RotateOnAxisAnimation.java  SlerpAnimation3D.java  SplineTranslateAnimation3D.java
rajawali/src/main/java/rajawali/bounds/: BoundingBox.java  BoundingSphere.java  IBoundingVolume.java
rajawali/src/main/java/rajawali/curves/: ASpiral3D.java  ArchimedeanSpiral3D.java  CubicBezierCurve3D.java  LogarithmicSpiral3D.java
rajawali/src/main/java/rajawali/lights/: DirectionalLight.java  PointLight.java  SpotLight.java
rajawali/src/main/java/rajawali/loader/: ALoader.java  AMeshLoader.java  IAnimatedMeshLoader.java  IAnimationSequenceLoader.java  ILoader.java  IMeshLoader.java  IParser.java  Loader3DSMax.java  LoaderAWD.java  LoaderGCode.java  LoaderMD2.java  LoaderOBJ.java  LoaderSTL.java  ParsingException.java
rajawali/src/main/java/rajawali/materials/: AResourceManager.java  Material.java
rajawali/src/main/java/rajawali/math/: Matrix.java  Plane.java  Quaternion.java
rajawali/src/main/java/rajawali/parser/: ALoader.java  IAnimationSequenceLoader.java  ILoader.java  Loader3DSMax.java  LoaderAWD.java  LoaderMD2.java  LoaderOBJ.java  LoaderSTL.java
rajawali/src/main/java/rajawali/postprocessing/: APass.java  APostProcessingEffect.java  IPass.java  IPostProcessingComponent.java  IPostProcessingEffect.java  PostProcessingManager.java
rajawali/src/main/java/rajawali/primitives/: Cube.java  Line3D.java  NPrism.java  Plane.java  PointSprite.java  RectangularPrism.java  ScreenQuad.java  Sphere.java
rajawali/src/main/java/rajawali/renderer/: AFrameTask.java  NullRenderer.java  RajawaliRenderer.java  RajawaliSideBySideRenderer.java  RenderTargetCube.java
rajawali/src/main/java/rajawali/scene/: ASceneFrameCallback.java  RajawaliScene.java
rajawali/src/main/java/rajawali/scenegraph/: A_nAABBTree.java  IGraphNode.java
rajawali/src/main/java/rajawali/terrain/: SquareTerrain.java  TerrainGenerator.java
rajawali/src/main/java/rajawali/util/: ArrayUtils.java  GLU.java  IObjectPicker.java  MeshExporter.java
rajawali/src/main/java/rajawali/visitors/: INode.java  INodeVisitor.java
rajawali/src/main/java/rajawali/wallpaper/: WallpaperSettings.java
rajawali/src/main/res/raw/: blend_add_fragment_shader.glsl  blend_screen_fragment_shader.glsl  blend_subtract_fragment_shader  fxaa_vertex_shader.glsl  sepia_fragment_shader.glsl  super_sample_fragment_shader.glsl  vignette_fragment_shader.glsl
rajawali/src/main/res/values/: attrs.xml
rajawali/src/release/res/values/: strings.xml
rajawali/src/test/java/org/rajawali3d/: ATransformable3DTest.java  Geometry3Dtest.java  Object3Dtest.java  Transformable3D.kt  WorldParametersTest.java
(+6823 files in other folders)
